--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .ts,.tsx"
   },
   "devDependencies": {
+    "@heroicons/react": "^2.1.3",
     "@svgr/webpack": "^6.3.1",
     "@tinacms/cli": "^1.5.43",
     "@types/js-cookie": "^3.0.0",
