--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@headlessui/react": "1.7.5",
     "@tailwindcss/typography": "^0.5.8",
+    "@vercel/analytics": "^1.3.1",
     "date-fns": "^2.23.0",
     "next": "^13.3.1",
     "react": "^18.2.0",
