--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
     "styled-jsx": "^5.1.2",
+    "swiper": "^11.1.4",
     "tailwindcss": "^3.2.4",
     "tinacms": "^1.5.24",
     "typescript": "^4.5.2"
