--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.2.0",
+    "react-spring": "^9.7.3",
     "styled-jsx": "^5.1.2",
     "swiper": "^11.1.4",
     "tailwindcss": "^3.2.4",
     "tinacms": "^1.5.24",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "usehooks-ts": "^3.1.0"
   }
 }
